style.css
:root {
    --color-accent: rgba(236, 38, 74, 1);
    --color-bg-logo: rgba(0, 0, 0, 0.5);
    --font-family-logo: 'Pacifico', cursive;
    --font-family-main: 'Oswald', sans-serif;
    --width-left-side: 40vw;
    --transition-color-bg: background-color 200ms linear;
    --width-right-side: 60vw;
}

:root.light {
    --border-input: 1px solid rgba(0, 0, 0, 0.2);
    --box-shadow-mid-section: 0px 3px 0px 0px var(--color-bg-top-section);
    --box-shadow-left-side: 2px 0 0 0 var(--color-bg-top-section);
    --color-bg-top-section: #adb5bd;
    --color-bg-mid-section: white;
    --color-bg-bottom-section: #e9ecef;
    --color-bg-btn: rgb(220, 220, 220);
    --color-text-main: rgb(18, 18, 18);
    --color-text-label: rgba(0, 0, 0, 0.7);
  }

:root.dark {
    --border-input: 1px solid rgba(230, 230, 230, 0.4);
    --box-shadow-mid-section: 0px 4px 0px 0px var(--color-accent);
    --box-shadow-left-side: 2px 0 0 0 var(--color-accent);
    --color-bg-top-section: #012a4a;
    --color-bg-mid-section: #01497c;
    --color-bg-bottom-section: #013a63;
    --color-bg-btn: rgb(36, 36, 36);
    --color-text-main: rgb(230, 230, 230);
    --color-text-label: rgba(230, 230, 230, 0.7);
  }

.container, 
.left-side, 
.right-side {
    display: flex; 
    height: 100vh;
    color: var(--color-text-main);
}

/* LEFT SIDE */
.left-side {
    color: white;
    width: var(--width-left-side);
    margin-right: 2px;
    box-shadow: var(--box-shadow-left-side);
}
.bg-img {
    width: var(--width-left-side);
}

.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    position: absolute;
    top: 100px;
    height: 120px;
    font-family: var(--font-family-logo);
    font-size: 50px;
    color: var(--color);
    background: var(--color-bg-logo);
    width: inherit;
}

.logo-img {
    width: 80px;
    height: 80px;
}

/* RIGHT SIDE */
.right-side {
    width: var(--width-right-side);
    box-sizing: border-box;
    flex-direction: column;
    font-family: var(--font-family-main);
}
.right-side > * {
    padding: 80px 0 0 80px;
    transition: var(--transition-color-bg);
}
.right-side p {
    font-size: 30px;
    margin-bottom: 20px;
}
.right-side p:nth-of-type(1) {
    margin-bottom: 30px;
}
.right-side .top-section {
    background-color: var(--color-bg-top-section);
}
.right-side h2 {
    font-size: 30px;
    font-weight: 900;
    padding-bottom: 30px;
}
.right-side .mid-section {
    background-color: var(--color-bg-mid-section);
    padding-bottom: 40px;
    box-shadow: var(--box-shadow-mid-section);
}

.inputs {
    display: flex;
    flex-direction: column;
    gap: 30px;
}
.personal-info,
.contact-info,
.password-entry {
    display: flex;
    gap: 30px;
    flex-wrap: wrap;

}

.form-group {
    display: flex;
    flex-direction: column;
}
.inputs label {
    font-size: 13px;
    margin-bottom: 10px;
    color: var(--color-text-label);
}
.inputs input {
    box-sizing: border-box;
    height: 30px;
    width: 200px;
    font-size: 15px;
    border: var(--border-input);
    border-radius: 5px;
    text-indent: 5px;
    background: transparent;
    color: var(--color-text-main);
}
.inputs input:focus {
    outline: none;
    border: 2px solid var(--color-accent);
}

.bottom-section {
    padding-top: 40px;
    background-color: var(--color-bg-bottom-section);
    height: 100%;
    margin-top: 3px;
}

.bottom-section button {
    display: block;
    font-size: 30px;
    padding: 5px 10px 10px;
    margin-bottom: 30px;
    font-family: var(--font-family-main);
    border: 2px solid var(--color-accent);
    border-radius: 5px;
    color: var(--color-accent);
    background-color: transparent;
    transition: all cubic-bezier(0.075, 0.82, 0.165, 1);
}
.bottom-section button:hover {
    background-color: var(--color-accent);
    color: var(--color-text-main);
    transform: scale(1.02);
    cursor: pointer;
}

.bottom-section a {
    text-decoration: none;
    margin-left: 5px;
    font-weight: 900;
    color: var(--color-accent);
}

#password-mismatch {
    color: var(--color-accent);
    font-size: 13px;
    display: none;
    position: absolute;
    margin-top: 5px;
}
#password-mismatch.visible {
    display: block;
}

@media (max-width: 767.98px) { 
    .right-side > * {
        padding: 20px 0 0 20px;
    }
    .container {
        flex-direction: column;
    }
    .left-side, 
    .bg-img, 
    .right-side {
        width: 100vw;
    }
    .left-side, 
    .bg-img {
        height: 200px;
    }
    .bg-img {
        object-fit: cover;
    }
    .logo {
        top: 0; 
        height: inherit; 
        align-items: flex-end;
    }
    .logo > * {
        padding-bottom: 20px;
    }
 }

@media (max-width: 850px) { 
    .right-side > * {
        padding: 30px 0 0 30px;
    }
}

/* THEME TOGGLER */
.theme-switch {
    position: absolute;
    top: 0;
    right: 15px;
}
#switch {
	height: 0;
	width: 0;
	visibility: hidden;
}

.theme-switch label {
	cursor: pointer;
	text-indent: -9999px;
	width: calc(200px / 3);
	height: calc(100px / 3);
	/* background: grey; */
	background: var(--color-accent);
	display: block;
	border-radius: 100px;
	position: relative;
}

.theme-switch label:after {
	content: '';
	position: absolute;
	top: calc(5px / 1.75);
	left: calc(5px / 1.75);
	width: calc(90px / 3.5);
	height: calc(90px / 3.5);
    background: var(--color-bg-top-section);
	border-radius: 90px;
	transition: 200ms;
}

#switch:checked + label {
	background: var(--color-accent);
}

#switch:checked + label:after {
	left: calc(100% - 5px);
	transform: translateX(-100%);
}

.theme-switch label:active:after {
	width: 130px;
}

